--- a/MerlionPortal/MerlionPortal-war/web/crms/createrequestforquotation.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/createrequestforquotation.xhtml
@@ -35,6 +35,11 @@
                         <p:menuitem value="View All Requests" url="viewallrequests.xhtml" />
                         <p:menuitem value="View All Quotations" url="viewallquotations.xhtml" />
                     </p:submenu>
+                    <p:submenu label="Contract" styleClass="display:block">
+                        <p:menuitem value="Create Service Contract" url="createservicecontract.xhtml" />
+                        <p:menuitem value="View All Contracts" url="viewallcontracts.xhtml" />
+                        <p:menuitem value="Renew Contracts" url="renewservicecontract.xhtml" />
+                    </p:submenu>
                 </p:panelMenu>
             </h:form>
         </ui:define>
@@ -80,6 +85,8 @@
                         <p:inputText value="#{createRFQManagedBean.origin}" />
                         <p:outputLabel value="Destination" /><p:spacer width="20" height="20" />
                         <p:inputText value="#{createRFQManagedBean.destination}" />
+                        <p:outputLabel value="Expected Quantity Per Month (TEU)" /><p:spacer width="20" height="20" />
+                        <p:inputText value="#{createRFQManagedBean.quantityPerMonth}" />
 
                     </h:panelGrid>
 
