--- a/MerlionPortal/MerlionPortal-war/web/crms/viewquotationdetail.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/viewquotationdetail.xhtml
@@ -35,6 +35,11 @@
                         <p:menuitem value="View All Requests" url="viewallrequests.xhtml" />
                         <p:menuitem value="View All Quotations" url="viewallquotations.xhtml" />
                     </p:submenu>
+                    <p:submenu label="Contract" styleClass="display:block">
+                        <p:menuitem value="Create Service Contract" url="createservicecontract.xhtml" />
+                        <p:menuitem value="View All Contracts" url="viewallcontracts.xhtml" />
+                        <p:menuitem value="Renew Contracts" url="renewservicecontract.xhtml" />
+                    </p:submenu>
                 </p:panelMenu>
             </h:form>
         </ui:define>
@@ -75,6 +80,9 @@
                         <h:outputText value="#{viewQuotationManagedBean.selectedQuotation.origin}" />
                         <h:outputText value="Destination:" /><p:spacer width="20" height="20" />
                         <h:outputText value="#{viewQuotationManagedBean.selectedQuotation.destination}" />
+                        <h:outputText value="Expected Quantity Per Month (TEU)" /><p:spacer width="20" height="20" />
+                        <h:outputText value="#{viewQuotationManagedBean.selectedQuotation.quantityPerMonth}" />
+          
 
                         <h:outputText value="Quotation Price Per TEU:" /><p:spacer width="20" height="20" />
                         <h:outputText value="#{viewQuotationManagedBean.selectedQuotation.price}" />
