updated dashboard oes

--- a/MerlionPortal/MerlionPortal-war/web/oes/reportdashboard.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/reportdashboard.xhtml
@@ -96,7 +96,7 @@
                         <!--Customer History-->
                         <c:set var="disablecrms" value="true" />
                         <c:set var="disablecrms" value="false" />
-                        <p:commandLink action="/crms/crmsindex.xhtml?faces-redirect=true" disabled="${disablecrms}" >
+                        <p:commandLink action="customeranalysis?faces-redirect=true" disabled="${disablecrms}" >
                             <p:graphicImage value="../img/crmstile.jpg"/>
                         </p:commandLink> 
                     </div>
