add basic messaging ui (component) add messaging component to admin dashboard add session bean for messaging module add messaging status in utils.
cheers

--- a/MerlionPortal/MerlionPortal-war/web/admin/dashboard.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/dashboard.xhtml
@@ -17,10 +17,11 @@
 
         <!-- Override Content -->
         <ui:define name="content">
+
+            <ui:include src="/templates/messaging/inbox.xhtml" />
             <c:set var="root" value="${request.contextPath}" />
             <div class="dashboard-content">
                 <div class="row">
-
                     <div>Please select the relevant services.</div>
                     <div class="dashboard-box">
                         <!--OES-->
