add in testing-Fuyao

--- a/MerlionPortal/MerlionPortal-war/web/mrp/viewbom.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/viewbom.xhtml
@@ -71,6 +71,7 @@
                 <p:dataTable id="components" var="component1" sortMode="multiple" value="#{productComponentViewEditManagedBean.components}" editable="true" style="margin-bottom:20px"
                              widgetVar="components"
                              emptyMessage="No Component found"
+                             resizableColumns="true"
                              rowKey="#{component.componentId}">
 
                     <f:facet name="header">
