--- a/MerlionPortal/MerlionPortal-war/web/admin/viewusers.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/viewusers.xhtml
@@ -63,8 +63,8 @@
                         <p:column filterBy="#{user.emailAddress}" headerText="Email Address" width="300" filterStyle="width: 280px;" filterMatchMode="contains">
                             <h:outputText value="#{user.emailAddress}" > </h:outputText>
                         </p:column>
-                        <p:column filterBy="#{user.credit}" headerText="Credit"  filterMatchMode="contains">
-                            <h:outputText value="#{user.credit}" />
+                        <p:column filterBy="#{user.creditLimit}" headerText="Credit Limit"  filterMatchMode="contains">
+                            <h:outputText value="#{user.creditLimit}" />
                         </p:column>
 
                         <p:column width="50" >
@@ -125,11 +125,7 @@
                                             </p:inplace> 
                                             <h:outputText value="Credit" />
                                             <p:inplace  editor="true">
-                                                <h:selectOneMenu value="#{viewUserManagerBean.selectedUser.credit}" required="true">
-                                                    <f:selectItem itemLabel="Not Applicable" itemValue="Not Applicable" />
-                                                    <f:selectItem itemLabel="Pass" itemValue="Pass" />
-                                                    <f:selectItem itemLabel="Fail" itemValue="Fail" />
-                                                </h:selectOneMenu>
+                                                <h:inputText value="#{viewUserManagerBean.selectedUser.creditLimit}" required="true" />
                                             </p:inplace> 
                                             <h:outputText value="Locked" />
                                             <p:inplace  editor="true">
