--- a/MerlionPortal/MerlionPortal-war/web/crms/createservicecontract.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/createservicecontract.xhtml
@@ -147,7 +147,7 @@
 
                     </h:panelGrid>
 
-                    <p:messages id="messages" autoUpdate="true" closable="true" />
+                    <p:messages id="messages" autoUpdate="true" showDetail="true" closable="true" />
 
                 </h:form>
 
