--- a/MerlionPortal/MerlionPortal-war/web/crms/viewcontractdetail.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/viewcontractdetail.xhtml
@@ -2,10 +2,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui"
       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <c:set var="import" value="templateuser.xhtml"/>
     <c:if test="#{dashboardBean.canUseCI() || dashboardBean.loginedUser.userType == 'superuser'}">
@@ -94,6 +95,14 @@
                             <h:outputText value="Storage Bin ID:" /><p:spacer width="20" height="20" />
                             <h:outputText value="#{viewContractManagedBean.selectedContract.storageBinId}" />
                         </c:if>
+
+                        <c:if test="#{(viewContractManagedBean.selectedContract.status eq 2 )and(viewContractManagedBean.selectedContract.partyA eq viewContractManagedBean.companyId)}" >
+                            <h:outputText value="Modified Terms &amp; Conditions:" /><p:spacer width="20" height="20" />
+                            <p:inputTextarea value="#{viewContractManagedBean.conditionText}" rows="5" cols="80" counter="display" maxlength="999" counterTemplate="{0} characters remaining." autoResize="true" />
+                            <p:spacer width="20" height="20" /><p:spacer width="20" height="20" /><h:outputText id="display" />
+
+                        </c:if>
+
                         <h:outputText value="Final Contract Price Per TEU:" /><p:spacer width="20" height="20" />
                         <h:outputText value="#{viewContractManagedBean.selectedContract.price}" />
                         <h:outputText value="Terms &amp; Conditions:" /><p:spacer width="20" height="20" />
@@ -109,16 +118,52 @@
                 </p:fieldset>
                 <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
                 <c:if test="#{((viewContractManagedBean.selectedContract.status eq 1) or (viewContractManagedBean.selectedContract.status eq 3 )) and viewContractManagedBean.selectedContract.partyB eq viewContractManagedBean.companyId}" >
-                    <p:commandButton value="Request To Modify" action="#{viewContractManagedBean.requestToModifyContract()}" update="form" ajax="true" />
+                    <p:commandButton value="Request To Modify" oncomplete="toggleModal();" />
                     <p:commandButton value="Accept Contract"  action="#{viewContractManagedBean.acceptContract()}" update="form" ajax="true" />
+                </c:if>
+                <c:if test="#{(viewContractManagedBean.selectedContract.status eq 2) and (viewContractManagedBean.selectedContract.partyA eq viewContractManagedBean.companyId)}" >
+                    <p:commandButton value="Confirm Modification" action="#{viewContractManagedBean.modifyContract}" update="form" ajax="true" />
                 </c:if>
                 <c:if test="#{viewContractManagedBean.selectedContract.status eq 4}">
                     <p:commandButton value="View PDF Contract"  action="#{viewContractManagedBean.previewPDFContract}" ajax="false" />
                     <p:commandButton value="Download PDF Contract"  action="#{viewContractManagedBean.downloadPDFContract}" ajax="false"/>
                 </c:if>
-                <p:commandButton value="Go Back" icon="ui-icon-circle-arrow-w" action="viewallcontracts.xhtml?faces-redirect-true"/>
+                <p:commandButton value="Go Back" icon="ui-icon-circle-arrow-w" action="viewallcontracts.xhtml?faces-redirect=true"/>
+
+
+
+                <!-- Reason to Modify-->
+                <div id="reasonModal" class="modal fade">
+                    <div class="modal-dialog">
+
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h2 class="modal-title">Reason for modification</h2>
+                            </div>
+                            <div id="body" class="modal-body">
+                                <h:panelGrid id="reasonDetail" columns="3">
+                                    <h:outputText value="Reason"/><p:spacer height="20" width="30" />
+                                    <h:inputTextarea styleClass="form-control" value="#{viewContractManagedBean.reason}" rows="5" cols="70" />
+                                </h:panelGrid>
+                                <p:messages id="modalMsg" showDetail="true" autoUpdate="true" closable="true" />
+
+                            </div>
+                            <div class="modal-footer">
+                                <h:commandButton value="Confirm" styleClass="btn btn-success" action="#{viewContractManagedBean.requestToModifyContract()}" >
+                                    <f:ajax execute="@form" render=":form:reasonDetail"/>
+                                </h:commandButton>
+                                <h:commandButton value="Close" styleClass="btn btn-warning" pt:data-dismiss="modal"></h:commandButton>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
             </h:form>
+            <script type="text/javascript">
+                function toggleModal() {
+                    $("#reasonModal").modal('show');
+                }
+            </script>
         </ui:define>
     </ui:composition>
 </html>
