--- a/MerlionPortal/MerlionPortal-war/web/crms/renewservicecontract.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/renewservicecontract.xhtml
@@ -1,12 +1,173 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <h:head>
-        <title>Facelet Title</title>
-    </h:head>
-    <h:body>
-        Hello from Facelets
-    </h:body>
-</html>
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
+    <c:set var="import" value="templateuser.xhtml"/>
+    <c:if test="#{dashboardBean.canUseCI() || dashboardBean.loginedUser.userType == 'superuser'}">
+        <c:set var="import" value="templateadmin.xhtml"/>
+    </c:if>
+
+    <ui:composition template="${root}/templates/${import}">        
+        <ui:param name="pageName" value="Renew Service Contract" />
+
+        <ui:define name="more-imports">
+            <ui:insert>
+            </ui:insert>
+        </ui:define>
+
+        <ui:define name="left">
+            <h:form id="formMain">
+                <p:panelMenu>
+                    <p:submenu label="CRMS HOME" styleClass="display:block">
+                        <p:menuitem value="CRMS Home" url="crmsindex.xhtml"/>     
+                        <p:menuitem value="Service Yellow Pages" url="serviceyellowpages.xhtml"/>
+                    </p:submenu>
+                    <p:submenu label="Service Catalog Management" styleClass="display:block">
+                        <p:menuitem value="Create New Service" url="createservice.xhtml" />
+                        <p:menuitem value="View All Services" url="viewcompanyservices.xhtml" />
+                    </p:submenu>
+                    <p:submenu label="Quotation" styleClass="display:block">
+                        <p:menuitem value="View All Requests" url="viewallrequests.xhtml" />
+                        <p:menuitem value="View All Quotations" url="viewallquotations.xhtml" />
+                    </p:submenu>
+                    <p:submenu label="Contract" styleClass="display:block">
+                        <p:menuitem value="Create Service Contract" url="createservicecontract.xhtml" />
+                        <p:menuitem value="View All Contracts" url="viewallcontracts.xhtml" />
+                        <p:menuitem value="Renew Contracts" url="renewservicecontract.xhtml" />
+                    </p:submenu>
+                </p:panelMenu>
+            </h:form>
+        </ui:define>
+
+        <ui:define name="right">
+            <p:panel id="basic" header="Renew Service Contract" style="margin-bottom:20px">
+                <h:form id="form">
+                    <p:ajaxStatus style="width:16px;height:16px;">
+                        <f:facet name="start">
+                            <h:graphicImage value="/img/load.gif" />
+                        </f:facet>
+                        <f:facet name="complete">
+                            <h:outputText value="" />
+                        </f:facet>
+                    </p:ajaxStatus>
+                    <h:panelGrid columns="3">
+
+                        <p:outputLabel for="contract" style="font-weight: bold" value="Search a Contract "/>
+
+                        <p:inputText id="contract" required="true" styleClass="form-control" requiredMessage="A valid contract is required." value="#{renewContractManagedBean.contractId}" />
+
+                        <p:commandButton icon="ui-icon-search" value="Search" actionListener="#{renewContractManagedBean.searchAValidContract()}" ajax="ture" update=":form2" />
+
+                    </h:panelGrid>
+                </h:form>
+                <h:form id="form2">
+                    <h:panelGrid id="create" columns="3">
+                        <c:if test="#{renewContractManagedBean.contract ne null}" >
+
+                            <h:outputLabel style="font-weight: bold" value="Quotation ID* "/><p:spacer width="40" height="20" />
+                            <h:outputLabel value="#{renewContractManagedBean.contract.serviceQuotation.quotationId}"/>
+
+                            <h:outputLabel style="font-weight: bold" value="Original Contract ID* " /><p:spacer width="40" height="20" />
+                            <h:outputLabel value="#{renewContractManagedBean.contract.contractId}" />
+
+                            <h:outputLabel style="font-weight: bold" value="Contract Status* " /><p:spacer width="40" height="20" />
+                            <h:outputLabel value="#{renewContractManagedBean.contract.status}" />
+
+
+                            <h:outputLabel style="font-weight: bold;color: red" value="Created Date* " /><p:spacer width="40" height="20" />
+                            <h:outputLabel value="#{renewContractManagedBean.contract.createdDate}" style="color: red"/>
+
+
+                            <h:outputLabel style="font-weight: bold" value="Party A ID"/><p:spacer width="40" height="20" />
+                            <h:outputLabel  value="#{renewContractManagedBean.contract.partyA}" />
+
+
+                            <h:outputLabel style="font-weight: bold" value="Party A Company Name"/><p:spacer width="40" height="20" />
+                            <h:outputLabel  value="#{createServiceContractManagedBean.partyAName}" />
+
+
+                            <h:outputLabel style="font-weight: bold" value="Party B ID"/><p:spacer width="40" height="20" />
+                            <h:outputLabel  value="#{renewContractManagedBean.contract.partyB}" />
+
+
+                            <h:outputLabel style="font-weight: bold" value="Party B Company Name"/><p:spacer width="40" height="20" />
+                            <h:outputLabel  value="#{createServiceContractManagedBean.partyBName}" />
+
+
+                            <h:outputLabel  style="font-weight: bold" value="Service Type * "/><p:spacer width="40" height="20" />
+                            <h:outputLabel  value="#{renewContractManagedBean.contract.serviceType}" />
+
+                            <h:outputLabel  style="font-weight: bold" value="Start Date * "/><p:spacer width="40" height="20" />
+                            <h:outputLabel  value="#{renewContractManagedBean.contract.startDate}" />
+
+                            <h:outputLabel  style="font-weight: bold" value="End Date * "/><p:spacer width="40" height="20" />
+                            <h:outputLabel  value="#{renewContractManagedBean.contract.endDate}" />
+
+                            <h:outputLabel  style="font-weight: bold" value="Contract Price Per TEU * "/><p:spacer width="20" height="20" />
+                            <h:outputLabel  value="#{renewContractManagedBean.contract.price}" />
+
+
+                            <h:outputLabel  style="font-weight: bold" value="Expected Quantity Per Month (TEU)"/><p:spacer width="20" height="20" />
+                            <h:outputLabel  value="#{renewContractManagedBean.contract.serviceQuotation.quantityPerMonth}" />
+
+
+                            <c:if test="#{renewContractManagedBean.contract.serviceQuotation.serviceType eq 'Transportation'}" >
+                                <h:outputLabel  style="font-weight: bold" value="Origin * "/><p:spacer width="20" height="20" />
+                                <h:outputLabel  value="#{renewContractManagedBean.contract.serviceQuotation.origin}" />
+
+
+                                <h:outputLabel  style="font-weight: bold" value="Destination * "/><p:spacer width="20" height="20" />
+                                <h:outputLabel  value="#{renewContractManagedBean.contract.serviceQuotation.destination}" />
+
+                            </c:if>
+
+                            <c:if test="#{renewContractManagedBean.contract.serviceQuotation.serviceType eq 'Warehouse'}" >
+                                <h:outputLabel  style="font-weight: bold" value="Warehoue ID *" /><p:spacer width="20" height="20" />
+                                <h:outputLabel value="#{renewContractManagedBean.contract.serviceQuotation.warehoueId}" />
+                                <h:outputLabel  style="font-weight: bold" value="Storage Zone ID *" /><p:spacer width="20" height="20" />
+                                <h:outputLabel value="#{renewContractManagedBean.contract.serviceQuotation.storageZoneId}" />
+                                <h:outputLabel  style="font-weight: bold" value="Storage Bin ID *" /><p:spacer width="20" height="20" />
+                                <h:outputLabel value="#{renewContractManagedBean.contract.serviceQuotation.storageBinId}" />
+                            </c:if>
+
+                            <h:outputLabel style="font-weight: bold" value="Terms &amp; Conditions * "/><p:spacer width="20" height="20" />
+                            <h:outputLabel value="#{renewContractManagedBean.contract.conditionText}" />
+
+                            <p:outputLabel for="startDate" value="New Contract Start Date" /><p:spacer width="20" height="20" />
+                            <p:calendar id="startDate" value="#{renewContractManagedBean.startDate}" pattern="dd-MM-yyyy" mask="true"/>
+                            <p:outputLabel for="endDate" value="New Contract End Date" /><p:spacer width="20" height="20" />
+                            <p:calendar id="endDate" value="#{renewContractManagedBean.endDate}" pattern="dd-MM-yyyy" mask="true"/>
+
+
+
+
+                            <p:commandButton value="Renew Contract" icon="ui-icon-check" actionListener="#{renewContractManagedBean.renewServiceContract()}" ajax="true" update="form2" />
+                        </c:if>
+
+                    </h:panelGrid>
+                    <p:dialog modal="true" resizable="false" header="Values" widgetVar="dlg" showEffect="fold">
+                        <p:panelGrid id="display" columns="2" columnClasses="label,value">
+                            <h:outputText value="Start Date:" />
+                            <h:outputText value="#{renewContractManagedBean.startDate}">
+                                <f:convertDateTime pattern="dd/MM/yyyy" />
+                            </h:outputText>
+                            <h:outputText value="End Date:" />
+                            <h:outputText value="#{renewContractManagedBean.endDate}">
+                                <f:convertDateTime pattern="dd/MM/yyyy" />
+                            </h:outputText>
+                        </p:panelGrid>
+                    </p:dialog>
+
+                    <p:messages id="messages" autoUpdate="true" showDetail="true" closable="true" />
+
+                </h:form>
+
+            </p:panel>
+        </ui:define>
+    </ui:composition>
+</html>
